--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />    
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;900&display=swap" rel="stylesheet">
     
-    <title>VProk</title>
+    <title>WProk.by</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
